<resources>
    <string name="app_name">HomeWork02</string>
    <string name="create">Create New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="display">Display Contact</string>
    <string name="finish">Finish</string>
    <string name="title_activity_create_new_contact">Create New Contact</string>
    <string name="save">Save</string>
    <string name="first"></string>
    <string name="last"></string>
    <string name="company"></string>
    <string name="phone"></string>
    <string name="email"></string>
    <string name="url"></string>
    <string name="address"></string>
    <string name="birthday"></string>
    <string name="nickname"></string>
    <string name="facebook"></string>
    <string name="twitter"></string>
    <string name="skype"></string>
    <string name="youtube"></string>
    <string name="alert_title_Pick_Contact">Pick a Contact</string>
    <string name="no_contact_lable"> There are no contact to show. </string>
    <string name="toast_no_contact_selected">No Contact Selected</string>
    <string name="toast_contact_added_label">Contact Added</string>
    <string name="toast_contact_updated_label">Contact Updated</string>
    <string name="toast_contact_deleted_label">Contact Deleted</string>

    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="title_activity_delete_contact">Delete Contact</string>
    <string name="title_activity_show_contact">Display Contact</string>
    <string name="title_activity_list_contact">Contacts List</string>
    <string name="fullName">Full Name: </string>
    <string name="companyLabel">Company: </string>
    <string name="phoneLabel">Phone: </string>
    <string name="emailLabel">Email: </string>
    <string name="urlLabel">URL: </string>
    <string name="addressLabel">Address: </string>
    <string name="birthdayLabel">Birthday: </string>
    <string name="nicknameLabel">NickName: </string>
    <string name="facebookLabel">Facebook URL: </string>
    <string name="twitterLabel">Twitter URL: </string>
    <string name="skypeLabel">Skype: </string>
    <string name="youtubeLabel">Youtube URL: </string>

</resources>
