<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.salman.inclass04.MainActivity">

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="38dp"
            android:text="@string/create" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonCreate"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="33dp"
            android:text="@string/edit" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/buttonEdit"
            android:layout_below="@+id/buttonEdit"
            android:layout_marginRight="40dp"
            android:layout_marginTop="36dp"
            android:text="Button"
            tools:text="@string/delete" />

        <Button
            android:id="@+id/buttonDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonDelete"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="29dp"
            android:text="@string/display" />

        <Button
            android:id="@+id/buttonFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/buttonDisplay"
            android:layout_below="@+id/buttonDisplay"
            android:layout_marginRight="40dp"
            android:layout_marginTop="44dp"
            android:text="@string/finish" />
    </RelativeLayout>
</layout>
